--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "gitignore-generator"
 version = "0.1.0"
 edition = "2021"
+authors = ["lrwx00t"]
+description = "generate gitignore using github api"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
